@@ -146,6 +146,13 @@ namespace OpenBabel
     
     if (atom == NULL)
       return VZero;
+    
+    int dimension = ((OBMol*)atom->GetParent())->GetDimension();
+    
+    if (dimension == 3) {
+      ////////////
+      //   3D   //
+      ////////////
 
     //  
     //  a   --->   a--*
@@ -282,6 +289,159 @@ namespace OpenBabel
       newbond *= length;
       newbond += atom->GetVector();
       return newbond;
+    }
+
+    } else if (dimension == 2) {
+      ////////////
+      //   2D   //
+      ////////////
+      OBBondIterator i;
+      
+      //
+      //  a   --->   a---*
+      //
+      if (atom->GetValence() == 0) {
+        newbond = atom->GetVector() + VX * length;
+        // Check that the vector is still finite before returning
+        if (!isfinite(newbond.x()) || !isfinite(newbond.y()))
+          newbond.Set(0.0, 0.0, 0.0);
+        return newbond;
+      }
+
+      // hyb * = 1                                                                //
+      // ^^^^^^^^^                                                                //
+      //                                                                          //
+      //   (a-1)--a   --->   (a-1)--a--*        angle(a-1, a, *) = 180            //
+      //                                                                          //
+      // hyb * = 2                                                                //
+      // ^^^^^^^^^                                                                //
+      // make sure we place the new atom trans to a-2 (if there is an a-2 atom)   //
+      //                                                                          //
+      //   (a-2)             (a-2)                                                //
+      //     \                 \                                                  //
+      //    (a-1)==a   --->   (a-1)==a          angle(a-1, a, *) = 120            //
+      //                              \                                           //
+      //                               *                                          //
+      // hyb * = 3                                                                //
+      // ^^^^^^^^^                                                                //
+      // make sure we place the new atom trans to a-2 (if there is an a-2 atom)   //
+      //                                                                          //
+      //   (a-2)             (a-2)                                                //
+      //     \                 \                                                  //
+      //    (a-1)--a   --->   (a-1)--a          angle(a-1, a, *) = 109            //
+      //                              \                                           //
+      //                               *                                          //
+      if (atom->GetValence() == 1) {
+        OBAtom *nbr = atom->BeginNbrAtom(i);
+        if (!nbr)
+          return VZero;
+        bond1 = atom->GetVector() - nbr->GetVector(); // bond (a-1)--a
+
+        for (OBAtom *nbr2 = nbr->BeginNbrAtom(i); nbr2; nbr2 = nbr->NextNbrAtom(i))
+          if (nbr2 != atom)
+            bond2 = nbr->GetVector() - nbr2->GetVector(); // bond (a-2)--(a-1)
+
+        int hyb = atom->GetHyb();
+        if (hyb == 1)
+          newbond = bond1;
+        else if (hyb == 2 || hyb == 3) {
+          matrix3x3 m;
+          m.RotAboutAxisByAngle(VZ, 60.0);
+          newbond = m*bond1;
+        }
+        newbond.normalize();
+        newbond *= length;
+        newbond += atom->GetVector();
+        return newbond;
+      } // GetValence() == 1
+  
+      //                          //
+      //    \         \           //
+      //     X  --->   X--*       //
+      //    /         /           //
+      //                          //
+      if (atom->GetValence() == 2) {
+        for (OBAtom *nbr = atom->BeginNbrAtom(i); nbr; nbr = atom->NextNbrAtom(i)) {
+          if (bond1 == VZero)
+            bond1 = atom->GetVector() - nbr->GetVector();
+          else
+            bond2 = atom->GetVector() - nbr->GetVector();
+        }
+        bond1.normalize();
+        bond2.normalize();
+        newbond = bond1 + bond2;
+        newbond.normalize();
+        newbond *= length;
+        newbond += atom->GetVector();
+        return newbond;
+      }
+
+      //                          //
+      //    \          \          //
+      //   --X  --->  --X--*      //
+      //    /          /          //
+      //                          //
+      if (atom->GetValence() == 3) {
+        if (atom->IsChiral()) {
+          OBBond *hash = 0;
+          OBBond *wedge = 0;
+          vector<OBBond*> plane;
+          for (OBAtom *nbr = atom->BeginNbrAtom(i); nbr; nbr = atom->NextNbrAtom(i)) {
+            OBBond *bond = atom->GetBond(nbr);
+
+            if (bond->IsWedge()) {
+              if (atom == bond->GetBeginAtom())
+                wedge = bond;
+              else
+                hash = bond;
+            } else 
+            if (bond->IsHash()) {
+              if (atom == bond->GetBeginAtom())
+                hash = bond;
+              else
+                wedge = bond;
+            } else
+              plane.push_back(bond);
+          }
+
+          if (wedge && !plane.empty()) {
+            bond2 = atom->GetVector() - wedge->GetNbrAtom(atom)->GetVector();
+            bond3 = atom->GetVector() - plane[0]->GetNbrAtom(atom)->GetVector();
+          } else if (hash && !plane.empty()) {
+            bond2 = atom->GetVector() - hash->GetNbrAtom(atom)->GetVector();
+            bond3 = atom->GetVector() - plane[0]->GetNbrAtom(atom)->GetVector();
+          } else if (plane.size() >= 2) {
+            bond2 = atom->GetVector() - plane[0]->GetNbrAtom(atom)->GetVector();
+            bond3 = atom->GetVector() - plane[1]->GetNbrAtom(atom)->GetVector();
+          } else if (hash && wedge) {
+            bond2 = atom->GetVector() - wedge->GetNbrAtom(atom)->GetVector();
+            bond3 = atom->GetVector() - hash->GetNbrAtom(atom)->GetVector();
+          }
+        } else {
+          for (OBAtom *nbr = atom->BeginNbrAtom(i); nbr; nbr = atom->NextNbrAtom(i)) {
+            if (bond1 == VZero)
+              bond1 = atom->GetVector() - nbr->GetVector();
+            else if (bond2 == VZero)
+              bond2 = atom->GetVector() - nbr->GetVector();
+            else
+              bond3 = atom->GetVector() - nbr->GetVector();
+          }
+        }
+
+        bond2.normalize();
+        bond3.normalize();
+        newbond = -(bond2 + bond3);
+        newbond.normalize();
+        newbond *= length;
+        newbond += atom->GetVector();
+        return newbond;
+      }
+  
+    } else {
+      ////////////
+      //   0D   //
+      ////////////
+      return VZero;
     }
 
     return VZero; //previously undefined
